syntax = "proto3";

package Wallets;

message CreateWalletRequest {
    string name = 1;
    string openKey = 2;
}